--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: "+177216"
+  alioss:
+    endpoint: ********
+    access-key-id: ********
+    access-key-secret: ********
+    bucket-name: ********
