--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -7,7 +7,12 @@ sky:
     username: root
     password: "+177216"
   alioss:
-    endpoint: ********
-    access-key-id: ********
-    access-key-secret: ********
-    bucket-name: ********
+    endpoint: test
+    access-key-id: test
+    access-key-secret: test
+    bucket-name: test
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    database: 10
