--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -23,7 +23,9 @@ spring:
       port: ${sky.redis.port}
       password: ${sky.redis.password}
       database: ${sky.redis.database}
-
+wechat:
+  appid: ${sky.wechat.appid}
+  secret: ${sky.wechat.secret}
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
@@ -48,3 +50,6 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    user-secret-key: itheima
+    user-ttl: 7200000
+    user-token-name: authentication
